DIA7(3)
A falta del comando cd, todo funcional y comentado